--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -14,31 +14,22 @@ env:
   STARED_NUMBER: 10
 
 jobs:
-
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
-      with:
-        go-version: ^1.13
-      id: go
-    - name: install dependencies
-      run: |
-        go get -u github.com/go-telegram-bot-api/telegram-bot-api
-        go get github.com/google/go-github/github
-        go get github.com/olekukonko/tablewriter
-    - name: run scripts
-      run: |
-        go run github.go -tgid="${{ secrets.TELE_CHAT_ID }}" -tgtoken=${{ secrets.TELE_TOKEN }} -username="${{ env.GITHUB_NAME }}" -stared=${{ env.STARED_NUMBER }}
-    - name: Push README
-      uses: github-actions-x/commit@v2.6
-      with:
-        github-token: ${{ secrets.G_T }}
-        commit-message: "Refresh README (GITHUB STATUS)"
-        files: README.md
-        rebase: 'true'
-        name: ${{ env.GITHUB_NAME }}
-        email: ${{ env.GITHUB_EMAIL }}
+      - uses: actions/checkout@v2
+      - name: Write README
+        uses: ./ # For testing, replace with yihong0618/my_github@v1 after published
+        with:
+          TELEGRAM_TOKEN: ${{ secrets.TELE_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELE_CHAT_ID }}
+      - name: Push README
+        uses: github-actions-x/commit@v2.6
+        with:
+          github-token: ${{ secrets.G_T }}
+          commit-message: "Refresh README (GITHUB STATUS)"
+          files: README.md
+          rebase: "true"
+          name: ${{ env.GITHUB_NAME }}
+          email: ${{ env.GITHUB_EMAIL }}
