--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -19,11 +19,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Write README
-        uses: ./
+      - name: My GitHub Status
+        uses: yihong0618/my_github@v1
         with:
-          TELEGRAM_TOKEN: ${{ inputs.TELE_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ inputs.TELE_CHAT_ID }}
+          TELEGRAM_TOKEN: ${{ secrets.TELE_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELE_CHAT_ID }}
       - name: Push README
         uses: github-actions-x/commit@v2.6
         with:
